<resources  xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sms</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_archived">Archived</string>
    <string name="title_scheduled">Scheduled</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus">QKSMS+</string>

    <string name="setup_title">Love texting again</string>
    <string name="setup_summary">Make QKSMS your default SMS app</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>

    <string name="menu_clear">Clear</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_archive">Archive conversation</string>
    <string name="menu_unarchive">Remove from archive</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save image</string>

    <string name="main_syncing">Optimizing database, this might take a minute…</string>

    <string name="compose_hint">Write a message…</string>

    <string name="message_status_sending">Sending…</string>
    <string name="message_status_delivered">Delivered %s</string>
    <string name="message_status_failed">Failed to send. Tap to try again</string>

    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocked">Blocked</string>
    <string name="drawer_more">More</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus">QKSMS+</string>
    <string name="drawer_help">Help &amp; feedback</string>

    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="scheduled_empty_text">Your scheduled messages will appear here</string>

    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Are you sure you would like to delete this conversation?</string>

    <string name="info_title">Details</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_theme">Theme</string>
    <string name="info_archive">Archive</string>
    <string name="info_unarchive">Unarchive</string>
    <string name="info_block">Block</string>
    <string name="info_unblock">Unblock</string>
    <string name="info_delete">Delete conversation</string>

    <string name="gallery_toast_saved">Saved image</string>

    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_general">General</string>
    <string name="settings_default_sms_title">Default SMS app</string>
    <string name="settings_default_sms_summary_true">QKSMS is your default SMS app</string>
    <string name="settings_default_sms_summary_false">Set QKSMS as your default SMS app</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_night_title">Night mode</string>
    <string name="settings_black_title">Pure black night mode</string>
    <string name="settings_night_start_title">Start time</string>
    <string name="settings_night_end_title">End time</string>
    <string name="settings_auto_emoji_title">Automatic emoji</string>
    <string name="settings_auto_emoji_summary">Convert text like :) to an emoji like 🙂</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_vibration_title">Vibration</string>
    <string name="settings_ringtone_title">Sound</string>
    <string name="settings_blocking_title">Blocking</string>
    <!-- Do not translate -->
    <string name="settings_should_i_answer_title">Should I Answer?</string>
    <string name="settings_should_i_answer_summary">Automatically filter messages from unsolicited numbers by using the \"Should I Answer\" app</string>
    <string name="settings_delivery_title">Delivery confirmations</string>
    <string name="settings_delivery_summary">Confirm that messages were sent successfully</string>
    <string name="settings_qkreply_title">QK Reply</string>
    <string name="settings_qkreply_summary">Popup for new messages</string>
    <string name="settings_text_size_title">Font size</string>
    <string name="settings_unicode_title">Strip accents</string>
    <string name="settings_unicode_summary">Remove accents from characters in outgoing SMS messages</string>
    <string name="settings_mms_title">MMS enabled</string>
    <string name="settings_mms_size_title">Max MMS attachment size</string>
    <string name="settings_sync_title">Sync messages</string>
    <string name="settings_sync_summary">Re-sync your messages with the native Android SMS database</string>

    <string name="blocked_title">Blocking</string>
    <string name="blocked_empty">Your blocked conversations will appear here</string>
    <string name="blocked_unblock_dialog_title">Unblock</string>
    <string name="blocked_unblock_dialog_message">Would you like to unblock this conversation?</string>

    <string name="qksms_plus_description_title">Support development, unlock everything</string>
    <string name="qksms_plus_description_summary">You can save a starving developer for just %s</string>
    <string name="qksms_plus_upgrade">Lifetime upgrade for %1$s %2$s</string>
    <string name="qksms_plus_upgrade_donate">Unlock + donate for %1$s %2$s</string>
    <string name="qksms_plus_thanks_title">Thank you for supporting QKSMS!</string>
    <string name="qksms_plus_thanks_summary">You now have access to all QKSMS+ features</string>
    <string name="qksms_plus_coming_soon">Coming soon</string>
    <string name="qksms_plus_themes_title">Premium themes</string>
    <string name="qksms_plus_themes_summary">Unlock beautiful theme colors not available on the Material Design palette</string>
    <string name="qksms_plus_emoji_title">Custom auto-emoji</string>
    <string name="qksms_plus_emoji_summary">Create custom auto-emoji shortcuts</string>
    <string name="qksms_plus_backup_title">Message backup</string>
    <string name="qksms_plus_backup_summary">Automatically back up your messages. Never again worry about losing your history if you change phones or your phone gets lost</string>
    <string name="qksms_plus_scheduled_title">Scheduled messages</string>
    <string name="qksms_plus_scheduled_summary">Wait a few seconds before sending your message</string>
    <string name="qksms_plus_delayed_title">Delayed sending</string>
    <string name="qksms_plus_delayed_summary">Wait a few seconds before sending your message</string>
    <string name="qksms_plus_night_title">Automatic night mode</string>
    <string name="qksms_plus_night_summary">Enable night mode based on the time of day</string>
    <string name="qksms_plus_blacklist_title">Advanced blocking</string>
    <string name="qksms_plus_blacklist_summary">Block messages that contain keywords or match patterns</string>
    <string name="qksms_plus_forward_title">Auto-forward</string>
    <string name="qksms_plus_forward_summary">Automatically forward messages from certain senders</string>
    <string name="qksms_plus_respond_title">Auto-respond</string>
    <string name="qksms_plus_respond_summary">Automatically respond to incoming messages with a preset response</string>
    <string name="qksms_plus_more_title">More</string>
    <string name="qksms_plus_more_summary">QKSMS is under active development, and your subscription will include all future QKSMS+ features!</string>

    <string name="settings_dialog_theme_title">Theme</string>

    <string name="widget_loading">Loading…</string>
    <string name="widget_more">View more conversations</string>

    <string name="qkreply_menu_read">Mark read</string>
    <string name="qkreply_menu_call">Call</string>
    <string name="qkreply_menu_expand">Show more</string>
    <string name="qkreply_menu_collapse">Show less</string>
    <string name="qkreply_menu_view">Open conversation</string>

    <string name="theme_material">Material</string>
    <string name="theme_plus">QKSMS+</string>
    <string name="theme_hex">HEX</string>
    <string name="theme_apply">Apply</string>

    <string name="notification_reply">Reply</string>
    <string name="notification_read">Mark read</string>

    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_unblock">Unblock</string>
    <string name="button_undo">Undo</string>
    <string name="button_more">More</string>

    <string name="toast_copied">Copied</string>
    <string name="toast_archived">Archived conversation</string>
    <string name="toast_qksms_plus">You must unlock QKSMS+ to use this</string>

    <string name="notification_message_failed_title">Message not sent</string>
    <string name="notification_message_failed_text">The message to %s failed to send</string>

    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>

    <string-array name="night_modes">
        <item>Disabled</item>
        <item>Always on</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="text_sizes">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Larger</item>
    </string-array>

    <string-array name="mms_sizes">
        <item>100KB</item>
        <item>200KB</item>
        <item>300KB</item>
        <item>600KB</item>
        <item>1000KB</item>
        <item>2000KB</item>
        <item>No limit</item>
    </string-array>

    <integer-array name="mms_sizes_ids">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>600</item>
        <item>1000</item>
        <item>2000</item>
        <item>0</item>
    </integer-array>

    <string-array name="qk_responses">
        <item>Okay</item>
        <item>Give me a moment</item>
        <item>On my way</item>
        <item>Thanks</item>
        <item>Sounds good</item>
        <item>What\'s up?</item>
        <item>Agreed</item>
        <item>No</item>
        <item>Love you</item>
        <item>Sorry</item>
        <item>LOL</item>
        <item>That\'s okay</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="kilobyte">KB</string>
    <string name="status_sending">正在发送...</string>
    <string name="status_failed">Failed. Tap for options</string>
    <string name="loading">载入中...</string>
    <string name="message_timestamp_format"><xliff:g id="string" example="Fred Flinstone">%1$s</xliff:g>\u0020-\u0020<xliff:g id="string" example="9:39AM">%2$s</xliff:g></string>

</resources>
