<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/contentView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@android:color/white">

        <linear.sms.widget.NormalTextView
            android:id="@+id/toolbarTitle"
            style="@style/ToolbarText"
            android:text="设置"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <linear.sms.widget.PreferenceView
                android:id="@+id/defaultSms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_default_sms_title" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_notifications_title" />

            <TextView style="@style/divider"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />

            <linear.sms.widget.NormalTextView
                style="@style/PreferenceCategory"
                android:text="@string/settings_category_appearance" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_theme_title" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_night_title"
                tools:summary="Automatic" />

            <TextView style="@style/divider"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />

            <linear.sms.widget.NormalTextView
                style="@style/PreferenceCategory"
                android:text="@string/settings_category_general" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_delivery_summary"
                app:title="@string/settings_delivery_title"
                app:widget="@layout/settings_switch_widget" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/qkreply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_qkreply_summary"
                app:title="@string/settings_qkreply_title"
                app:widget="@layout/settings_switch_widget" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_text_size_title" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/mms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:title="@string/settings_mms_title"
                app:widget="@layout/settings_switch_widget" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/mmsSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:title="@string/settings_mms_size_title"
                tools:summary="100KB" />

            <linear.sms.widget.PreferenceView
                android:id="@+id/sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_sync_summary"
                app:title="@string/settings_sync_title" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="@drawable/ab_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView style="@style/divider"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>